--- a/hermes3-solps-soledge/postprocessing/2024-01-24_SOLPS_tight_noD2.ipynb
+++ b/hermes3-solps-soledge/postprocessing/2024-01-24_SOLPS_tight_noD2.ipynb
@@ -29,6 +29,7 @@
     "import traceback\n",
     "import xarray\n",
     "import xbout\n",
+    "import xhermes\n",
     "import scipy\n",
     "import re\n",
     "\n",
