--- a/hypnotoad/2023-11-23-gridgen_fine.ipynb
+++ b/hypnotoad/2023-11-23-gridgen_fine.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "import yaml\n",
@@ -30,7 +21,7 @@
     "sys.path.append(os.path.join(onedrive_path, r\"Project\\python-packages\"))\n",
     "\n",
     "from gridtools.hypnotoad_tools import *\n",
-    "from gridtools.b2_tools import *\n",
+    "# from gridtools.b2_tools import *\n",
     "# import solps_python_scripts.setup\n",
     "# from solps_python_scripts.plot_solps       import plot_mesh, plot_wall_loads\n",
     "# from solps_python_scripts import *\n",
