--- a/131/131-2024-04-10 - Neutral balances.ipynb
+++ b/131/131-2024-04-10 - Neutral balances.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,38 +62,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Reading case xph13bc-lo_secondaryfloor\n",
+      "- Reading case xph14-newalldisabled_lofloors\n",
       "-----------------------\n",
+      "- Looking for squash file\n",
+      "- Squashoutput file not found, creating...\n",
+      "- Done\n",
+      "\n",
+      "Unnormalising with xHermes\n",
+      "- Reading case xph14a-add_rec\n",
+      "-----------------------\n",
+      "- Looking for squash file\n",
+      "- Squashoutput file not found, creating...\n",
+      "- Done\n",
       "\n",
       "Unnormalising with xHermes\n"
      ]
     }
    ],
    "source": [
-    "toload = [ \n",
-    "    # dict(name=\"alldisabled\", id=\"xph9cb-alldisabled_dflux\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    # dict(name=\"addrec\", id=\"xph10a-9c_add_recomb\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    # dict(name=\"addrec_lortol\", id=\"xph10abb-lortol_dflux\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    # dict(name=\"addrec_lofloor\", id=\"xph10acb-lofloor_dflux\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    # dict(name=\"newalldisabled\", id=\"xph13a-alldisabled_nolax_novisc_nowallrecl_lofloor\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
+    "   \n",
+    "toload = [\n",
+    "    dict(name=\"fixfloorbase\", id = \"xph14-newalldisabled_lofloors\"),\n",
+    "    dict(name=\"addrec\", id = \"xph14a-add_rec\"),\n",
     "    \n",
-    "    # dict(name=\"newalldisabled_lopnfloor\", id=\"xph13b-newalldisabled_lopnfloor\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    # dict(name=\"fix_dnnnn\", id=\"xph9cc-fix_dnnnn\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    # dict(name=\"newalldisabled_flushnn\", id=\"xph13bb-flush_nn\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    \n",
-    "    # dict(name=\"upwind1stord_lofloor\", id=\"xph6ced-lofloor\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
-    "    dict(name=\"upwind1stord_losecondaryfloor\", id=\"xph13bc-lo_secondaryfloor\", unnormalise_geom = True, use_xhermes = True, squash = False), \n",
     "]\n",
     "cs = {}\n",
     "for case in toload:\n",
-    "    cs[case[\"name\"]] = db.load_case_2D(case[\"id\"], use_squash = case[\"squash\"], verbose = True)\n"
+    "    cs[case[\"name\"]] = db.load_case_2D(\n",
+    "        case[\"id\"], use_squash = False, verbose = True, \n",
+    "        # force_squash = force,\n",
+    "        use_xhermes = True)"
    ]
   },
   {
@@ -128,49 +133,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for name in cs:\n",
+    "    ds = cs[name].ds\n",
+    "    #### PARTICLE FLOW\n",
+    "    ds[\"pfXlo\"] = ds[\"ParticleFlow_d_xlow\"]\n",
+    "    ds[\"pfXhi\"] = ds[\"pfXlo\"].shift(x=-1)\n",
+    "    ds[\"pfYlo\"] = ds[\"ParticleFlow_d_ylow\"]\n",
+    "    ds[\"pfYhi\"] = ds[\"pfYlo\"].shift(theta=-1)\n",
     "\n",
-    "#### PARTICLE FLOW\n",
-    "ds[\"pfXlo\"] = ds[\"ParticleFlow_d_xlow\"]\n",
-    "ds[\"pfXhi\"] = ds[\"pfXlo\"].shift(x=-1)\n",
-    "ds[\"pfYlo\"] = ds[\"ParticleFlow_d_ylow\"]\n",
-    "ds[\"pfYhi\"] = ds[\"pfYlo\"].shift(theta=-1)\n",
+    "    ds[\"pfXnet\"] = ds[\"pfXlo\"] - ds[\"pfXhi\"]\n",
+    "    ds[\"pfYnet\"] = ds[\"pfYlo\"] - ds[\"pfYhi\"]\n",
+    "    ds[\"pfNet\"] = ds[\"pfXnet\"] + ds[\"pfYnet\"]\n",
     "\n",
-    "ds[\"pfXnet\"] = ds[\"pfXlo\"] - ds[\"pfXhi\"]\n",
-    "ds[\"pfYnet\"] = ds[\"pfYlo\"] - ds[\"pfYhi\"]\n",
-    "ds[\"pfNet\"] = ds[\"pfXnet\"] + ds[\"pfYnet\"]\n",
+    "    ds[\"pfSrc\"] = ds[\"Sd+_iz\"]*ds[\"dv\"]*-1  + ds[\"Sd_target_recycle\"]*ds[\"dv\"]\n",
     "\n",
-    "ds[\"pfSrc\"] = ds[\"Sd+_iz\"]*ds[\"dv\"]*-1  + ds[\"Sd_target_recycle\"]*ds[\"dv\"]\n",
-    "\n",
-    "if \"Sd+_rec\" in ds.data_vars:\n",
-    "    ds[\"pfSrc\"] += ds[\"Sd+_rec\"]*ds[\"dv\"]*-1\n",
-    "if \"Sd_wall_recycle\" in ds.data_vars:\n",
-    "    ds[\"pfSrc\"] += ds[\"Sd_wall_recycle\"]*ds[\"dv\"]\n",
-    "if \"Sd_src\" in ds.data_vars:\n",
-    "    ds[\"pfSrc\"] += ds[\"Sd_src\"]*ds[\"dv\"]\n",
-    "\n",
-    "\n",
-    "ds[\"pfBal\"] = ds[\"pfSrc\"] + ds[\"pfNet\"]\n",
-    "\n",
-    "#### ENERGY FLOW\n",
-    "ds[\"efXlo\"] = ds[\"EnergyFlow_d_xlow\"]\n",
-    "ds[\"efXhi\"] = ds[\"efXlo\"].shift(x=-1)\n",
-    "ds[\"efYlo\"] = ds[\"EnergyFlow_d_ylow\"]\n",
-    "ds[\"efYhi\"] = ds[\"efYlo\"].shift(theta=-1)\n",
-    "\n",
-    "ds[\"efXnet\"] = ds[\"efXlo\"] - ds[\"efXhi\"]\n",
-    "ds[\"efYnet\"] = ds[\"efYlo\"] - ds[\"efYhi\"]\n",
-    "ds[\"efNet\"] = ds[\"efXnet\"] + ds[\"efYnet\"]\n",
+    "    if \"Sd+_rec\" in ds.data_vars:\n",
+    "        ds[\"pfSrc\"] += ds[\"Sd+_rec\"]*ds[\"dv\"]*-1\n",
+    "    if \"Sd_wall_recycle\" in ds.data_vars:\n",
+    "        ds[\"pfSrc\"] += ds[\"Sd_wall_recycle\"]*ds[\"dv\"]\n",
+    "    if \"Sd_src\" in ds.data_vars:\n",
+    "        ds[\"pfSrc\"] += ds[\"Sd_src\"]*ds[\"dv\"]\n",
     "\n",
     "\n",
-    "ds[\"efSrc\"] = ds[\"Ed+_iz\"]*ds[\"dv\"]*-1  + ds[\"Ed_target_recycle\"]*ds[\"dv\"]\n",
+    "    ds[\"pfBal\"] = ds[\"pfSrc\"] + ds[\"pfNet\"]\n",
     "\n",
-    "if \"Ed+_rec\" in ds.data_vars:\n",
-    "    ds[\"efSrc\"] += ds[\"Ed+_rec\"]*ds[\"dv\"]*-1\n",
-    "if \"Ed_wall_recycle\" in ds.data_vars:\n",
-    "    ds[\"efSrc\"] += ds[\"Ed_wall_recycle\"]*ds[\"dv\"]\n",
-    "if \"Pd_src\" in ds.data_vars:\n",
-    "    ds[\"efSrc\"] += ds[\"Pd_src\"]*ds[\"dv\"] * 3/2\n",
+    "    #### ENERGY FLOW\n",
+    "    ds[\"efXlo\"] = ds[\"EnergyFlow_d_xlow\"]\n",
+    "    ds[\"efXhi\"] = ds[\"efXlo\"].shift(x=-1)\n",
+    "    ds[\"efYlo\"] = ds[\"EnergyFlow_d_ylow\"]\n",
+    "    ds[\"efYhi\"] = ds[\"efYlo\"].shift(theta=-1)\n",
     "\n",
+    "    ds[\"efXnet\"] = ds[\"efXlo\"] - ds[\"efXhi\"]\n",
+    "    ds[\"efYnet\"] = ds[\"efYlo\"] - ds[\"efYhi\"]\n",
+    "    ds[\"efNet\"] = ds[\"efXnet\"] + ds[\"efYnet\"]\n",
+    "\n",
+    "\n",
+    "    ds[\"efSrc\"] = ds[\"Ed+_iz\"]*ds[\"dv\"]*-1  + ds[\"Ed_target_recycle\"]*ds[\"dv\"]\n",
+    "\n",
+    "    if \"Ed+_rec\" in ds.data_vars:\n",
+    "        ds[\"efSrc\"] += ds[\"Ed+_rec\"]*ds[\"dv\"]*-1\n",
+    "    if \"Ed_wall_recycle\" in ds.data_vars:\n",
+    "        ds[\"efSrc\"] += ds[\"Ed_wall_recycle\"]*ds[\"dv\"]\n",
+    "    if \"Ed_target_refl\" in ds.data_vars:\n",
+    "        ds[\"efSrc\"] += ds[\"Ed_target_refl\"]*ds[\"dv\"]\n",
+    "    if \"Pd_src\" in ds.data_vars:\n",
+    "        ds[\"efSrc\"] += ds[\"Pd_src\"]*ds[\"dv\"] * 3/2\n",
+    "\n",
+    "    cs[name].ds = ds\n",
     "# ds[\"pfSrc\"] = ds[\"Sd+_iz\"]*ds[\"dv\"]*-1  + ds[\"Sd_target_recycle\"]*ds[\"dv\"]"
    ]
   },
