--- a/hermes3-solps-soledge/postprocessing/2023-12-21_3e19_update.ipynb
+++ b/hermes3-solps-soledge/postprocessing/2023-12-21_3e19_update.ipynb
@@ -97,29 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of importlib_metadata._adapters failed: Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\mikek\\OneDrive\\Project\\pyenvs\\fusion-a-310\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"c:\\Users\\mikek\\OneDrive\\Project\\pyenvs\\fusion-a-310\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 475, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\Users\\mikek\\AppData\\Local\\Programs\\Python\\Python310\\lib\\importlib\\__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"c:\\Users\\mikek\\OneDrive\\Project\\pyenvs\\fusion-a-310\\lib\\site-packages\\importlib_metadata\\_adapters.py\", line 8, in <module>\n",
-      "    from ._compat import pypy_partial\n",
-      "ImportError: cannot import name 'pypy_partial' from 'importlib_metadata._compat' (c:\\Users\\mikek\\OneDrive\\Project\\pyenvs\\fusion-a-310\\lib\\site-packages\\importlib_metadata\\_compat.py)\n",
-      "]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -127,18 +107,20 @@
       "- Reading case d24bd-cond0.25_frec0.48\n",
       "-----------------------\n",
       "- Looking for squash file\n",
-      "- Squash file found. squash date 10/16/2023, 10:34:08, dmp file date 10/15/2023, 23:08:48\n",
-      "\n",
-      "- Reading case d26c-c0.25_f0.48_3e19\n",
-      "-----------------------\n",
-      "- Looking for squash file\n",
-      "- Squash file found. squash date 12/21/2023, 15:24:02, dmp file date 10/20/2023, 15:23:04\n",
-      "\n",
-      "- Reading case d24bd-cond0.25_frec0.48\n",
-      "-----------------------\n",
-      "- Looking for squash file\n",
-      "- Squash file found. squash date 10/16/2023, 10:34:08, dmp file date 10/15/2023, 23:08:48\n",
-      "\n"
+      "- Squash file found. squash date 10/16/2023, 10:34:08, dmp file date 10/15/2023, 23:08:48\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'xhermes' has no attribute 'open_hermesdataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m casestore \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m case \u001b[38;5;129;01min\u001b[39;00m toload:\n\u001b[1;32m---> 11\u001b[0m     casestore[case[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]] \u001b[38;5;241m=\u001b[39m \u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_case_2D\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcase\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_squash\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_xhermes\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\mikek\\OneDrive\\Project\\python-packages\\sdtools\\hermes3\\case_db.py:72\u001b[0m, in \u001b[0;36mCaseDB.load_case_2D\u001b[1;34m(self, casename, **kwargs)\u001b[0m\n\u001b[0;32m     69\u001b[0m casepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcasepaths[casename]\n\u001b[0;32m     70\u001b[0m gridfilepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_grid_path(casename)\n\u001b[1;32m---> 72\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Load\u001b[38;5;241m.\u001b[39mcase_2D(\n\u001b[0;32m     73\u001b[0m             casepath \u001b[38;5;241m=\u001b[39m casepath,\n\u001b[0;32m     74\u001b[0m             gridfilepath \u001b[38;5;241m=\u001b[39m gridfilepath,\n\u001b[0;32m     75\u001b[0m             \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m     76\u001b[0m         )\n",
+      "File \u001b[1;32mc:\\Users\\mikek\\OneDrive\\Project\\python-packages\\sdtools\\hermes3\\load.py:112\u001b[0m, in \u001b[0;36mLoad.case_2D\u001b[1;34m(casepath, gridfilepath, verbose, squeeze, unnormalise_geom, unnormalise, use_squash, force_squash, use_xhermes, **xbout_kwargs)\u001b[0m\n\u001b[0;32m    109\u001b[0m     loadfilepath \u001b[38;5;241m=\u001b[39m squashfilepath\n\u001b[0;32m    111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m use_xhermes \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m--> 112\u001b[0m     ds \u001b[38;5;241m=\u001b[39m \u001b[43mxhermes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen_hermesdataset\u001b[49m(\n\u001b[0;32m    113\u001b[0m                 datapath \u001b[38;5;241m=\u001b[39m loadfilepath, \n\u001b[0;32m    114\u001b[0m                 inputfilepath \u001b[38;5;241m=\u001b[39m inputfilepath, \n\u001b[0;32m    115\u001b[0m                 gridfilepath \u001b[38;5;241m=\u001b[39m gridfilepath,\n\u001b[0;32m    116\u001b[0m                 geometry \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoroidal\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    117\u001b[0m                 \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mxbout_kwargs\n\u001b[0;32m    118\u001b[0m                 )\n\u001b[0;32m    119\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    120\u001b[0m     ds \u001b[38;5;241m=\u001b[39m xbout\u001b[38;5;241m.\u001b[39mload\u001b[38;5;241m.\u001b[39mopen_boutdataset(\n\u001b[0;32m    121\u001b[0m                     datapath \u001b[38;5;241m=\u001b[39m loadfilepath, \n\u001b[0;32m    122\u001b[0m                     inputfilepath \u001b[38;5;241m=\u001b[39m inputfilepath, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    125\u001b[0m                     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mxbout_kwargs\n\u001b[0;32m    126\u001b[0m                     )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'xhermes' has no attribute 'open_hermesdataset'"
      ]
     }
    ],
@@ -149,11 +131,12 @@
     "    dict(name=\"afnE_base\", id = \"d24bd-cond0.25_frec0.48\"),\n",
     "    dict(name=\"afnE_3e19\", id = \"d26c-c0.25_f0.48_3e19\"),\n",
     "    dict(name=\"afnE_2e19\", id = \"d24bd-cond0.25_frec0.48\"),\n",
+    "    \n",
     "    # dict(name=\"afn_new_cond0.1\", id = \"d21a-cond_alpha_0.1\")\n",
     "]\n",
     "casestore = {}\n",
     "for case in toload:\n",
-    "    casestore[case[\"name\"]] = db.load_case_2D(case[\"id\"], use_squash = True, verbose = True)"
+    "    casestore[case[\"name\"]] = db.load_case_2D(case[\"id\"], use_squash = True, verbose = True, use_xhermes = True)"
    ]
   },
   {
@@ -630,7 +613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "fusion-a-310",
    "language": "python",
    "name": "python3"
   },
@@ -646,12 +629,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "5d3028fb5fc7b0ce0999a527284344536284ceb78ab851f9ad8deb4f33e74dff"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
