--- a/hermes3-solps-soledge/dev_compare_lineplot.ipynb
+++ b/hermes3-solps-soledge/dev_compare_lineplot.ipynb
@@ -449,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "fusion-a-310",
    "language": "python",
    "name": "python3"
   },
@@ -465,12 +465,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "5d3028fb5fc7b0ce0999a527284344536284ceb78ab851f9ad8deb4f33e74dff"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
