--- a/hermes3-solps-soledge/post-PSI/2024-06-13 - Workshop PP.ipynb
+++ b/hermes3-solps-soledge/post-PSI/2024-06-13 - Workshop PP.ipynb
@@ -1396,7 +1396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "fusion-a-310",
    "language": "python",
    "name": "python3"
   },
@@ -1411,11 +1411,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "6a682ef18c43ef4e8ca96f3f61389d1a336ad35b099cf44a1678bebafd66c9bc"
-   }
   }
  },
  "nbformat": 4,
