--- a/mast-u/grid work/2023-12-15 - grid 1_clean.ipynb
+++ b/mast-u/grid work/2023-12-15 - grid 1_clean.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "import yaml\n",
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +221,8 @@
     "path_yaml = os.path.join(path, f\"{gridname}.yml\")\n",
     "path_grid = os.path.join(path, f\"{gridname}.nc\")\n",
     "\n",
-    "options = Options(path_yaml).yml\n",
+    "with open(path_yaml) as f:\n",
+    "    options = yaml.safe_load(f)\n",
     "\n",
     "## Read equilibrium\n",
     "with open(r\"C:\\Users\\mikek\\OneDrive\\Project\\collab\\tech\\grid\\MAST-U\\D moulton super X\\qian_exp45460_new.eqdsk\", \"rt\") as fh:\n",
