--- a/solps-work/c3-parallel_plots.ipynb
+++ b/solps-work/c3-parallel_plots.ipynb
@@ -2160,11 +2160,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Radial plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "case = \"100MW_inner_arpuff\"\n",
+    "\n",
+    "slc = store_slc[case]\n",
+    "df = slc.get_1d_radial_data([\"fhex_total\", \"fhex_cond\"], region = \"omp\", keep_geometry = True, guards = False)\n",
+    "df[\"hf_tot\"] = df[\"fhex_total\"] / df[\"apar\"] * -1\n",
+    "df[\"hf_cond_e\"] = df[\"fhex_cond\"] / df[\"apar\"] * -1\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(df[\"dist\"]*100, df[\"hf_tot\"], marker = \"o\", ms = 2, lw = 1.0, label = \"Total\")\n",
+    "ax.plot(df[\"dist\"]*100, df[\"hf_cond_e\"], marker = \"o\", ms = 2, lw = 1.0, label = \"Electron cond.\")\n",
+    "ax.set_xlabel(\"Separatrix distance [cm]\")\n",
+    "ax.set_ylabel(\"Heat flux [Wm$^{-2}$]\")\n",
+    "# ax.set_xlim(-0.5, 0.5)\n",
+    "ax.legend()\n",
+    "# ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = slc.get_1d_radial_data([\"fhex_total\", \"fhex_cond\"], region = \"omp\", keep_geometry = True, guards = False, interpolate = False)\n",
+    "\n",
+    "sel = self.s[\"omp\"]\n",
+    "\n",
+    "fig, ax = plt.subplots(dpi = 300)\n",
+    "\n",
+    "slc.plot_2d(param = \"Te\", ax = ax, grid_only = False)\n",
+    "ax.set_xlim(3.8,4.4)\n",
+    "ax.set_ylim(-0.5, 0.5)\n",
+    "ax.scatter(df[\"R\"], np.zeros_like(df[\"R\"]), marker = \"o\", s = 3, c = \"deeppink\")\n",
+    "ax.scatter(self.g[\"R\"][sel], self.g[\"Z\"][sel], marker = \"o\", s = 3, c = \"red\")\n",
+    "ax.grid(which = \"both\", visible = False)"
+   ]
   }
  ],
  "metadata": {
