--- a/hypnotoad/2024-08-27 - nonortho_xpoint_fullres.ipynb
+++ b/hypnotoad/2024-08-27 - nonortho_xpoint_fullres.ipynb
@@ -480,6 +480,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Show existing grids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sdtools'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m orthogonal \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mMike\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mOneDrive\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mProject\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mpython-packages\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mHypnotoad\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mintegrated_tests\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mconnected_doublenull_orthogonal\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mexpected_orthogonal.grd.nc\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m nonorthog \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mMike\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mOneDrive\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mProject\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mpython-packages\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mHypnotoad\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mintegrated_tests\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mconnected_doublenull_nonorthogonal\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mexpected_nonorthogonal.grd.nc\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msdtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhermes3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgrid_fields\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Mesh \u001b[38;5;28;01mas\u001b[39;00m sdMesh\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sdtools'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Junk"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -539,7 +572,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fusion-a-310",
+   "display_name": "fusion312",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
