--- a/hermes3-solps-soledge/post-PSI/2025-08-21-P0728 - Diagnose fluctuations.ipynb
+++ b/hermes3-solps-soledge/post-PSI/2025-08-21-P0728 - Diagnose fluctuations.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from boututils.datafile import DataFile\n",
     "from boutdata.collect import collect\n",
@@ -109,6 +100,13 @@
     "for case in toload:\n",
     "    cs[case[\"name\"]] = db.load_case_2D(case[\"id\"], use_squash = False, verbose = True, unnormalise = case[\"unnormalise\"], unnormalise_geom = case[\"unnormalise\"])\n",
     "    cs[case[\"name\"]].extract_2d_tokamak_geometry()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Max and RMS fluctuations"
    ]
   },
   {
@@ -266,6 +264,54 @@
     "    \n",
     "fig.subplots_adjust(wspace = 0.5)\n",
     "fig.legend(loc = \"upper center\", bbox_to_anchor = (0.5, -0.1), ncols = 3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fluctuation 2D plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_fluctuations(cs[\"brag\"].ds, [\"Pe\", \"Pd\", \"Nd+\", \"Nd\", \"Te\", \"Td\", \"NVd+\", \"NVd\"], mode = \"rel_variable_rms\", ylims = (-0.85, 0.1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fluctuation animation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close(\"all\")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize = (3,9))\n",
+    "\n",
+    "name = \"brag\"\n",
+    "\n",
+    "ds = cs[name].ds\n",
+    "xbout.plotting.animate.animate_poloidal(\n",
+    "    ds[\"NVd+\"].hermesm.clean_guards(), \n",
+    "    ax = ax, \n",
+    "    cmap = \"Spectral_r\", \n",
+    "    fps = 5, \n",
+    "    targets = False,\n",
+    "    logscale = True,\n",
+    "    vmin = -1e-3,\n",
+    "    vmax =  1e-3\n",
+    "    )"
    ]
   },
   {
