--- a/hermes3-other/tool-redistribute.ipynb
+++ b/hermes3-other/tool-redistribute.ipynb
@@ -2,31 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boutdata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "416/8"
    ]
   },
   {
@@ -38,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grid sizes:  1 416 1\n"
+      "Grid sizes:  36 100 1\n"
      ]
     },
     {
@@ -54,8 +34,8 @@
    ],
    "source": [
     "from boutdata.restart import redistribute\n",
-    "casepath = r\"/ssd_scratch/hcases/balances1d/spr45_nD_fimp-0-0_udens-1-86e20\"\n",
-    "newpath = rf\"{casepath}_redist\"\n",
+    "casepath = r\"/home/mike/work/cases/2025-updateST40/d42acb-with_guards\"\n",
+    "newpath = r\"/home/mike/work/cases/2025-updateST40/upst10c-2e19_clim_1.0_maxmfp_1_hires\"\n",
     "\n",
     "# casepath = r\"/ssd_scratch/hcases/balances1d/spr45_nD_linPow_3x_fimp-6-0-2-3\"\n",
     "# newpath = rf\"{casepath}_redist\"\n",
@@ -63,7 +43,7 @@
     "# inputfilepath = os.path.join(casepath, \"BOUT.inp\")\n",
     "# squashfilepath = os.path.join(casepath, \"BOUT.squash.nc\") # Squashoutput hardcoded to this filename\n",
     "\n",
-    "redistribute(8, path = casepath, nxpe = 1, output = newpath)"
+    "redistribute(10, path = casepath, nxpe = 1, output = newpath)"
    ]
   },
   {
@@ -1552,7 +1532,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fusion-a-310",
+   "display_name": "base-3.12.5 (3.12.5)",
    "language": "python",
    "name": "python3"
   },
@@ -1566,7 +1546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   },
   "orig_nbformat": 4
  },
