--- a/examples/2D post-processing examples.ipynb
+++ b/examples/2D post-processing examples.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "Done\n"
      ]
     }
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +152,9 @@
     "- The metadata contains all the branch cuts as per the BOUT++ docs: https://bout-dev.readthedocs.io/en/stable/user_docs/input_grids.html\n",
     "- jyseps1_1 etc have been simplified to j1_1 etc.\n",
     "- For each version of the branch cut there is one without guards included, these have a \"g\" suffix, e.g. j1_1g.\n",
-    "- There are also midplane indices. If the cellcount is even in the SOL, there won't be a cell centre exactly on the midplane. omp_a and omp_b are the cells above and below it. There is also imp_a and imp_b."
+    "- There are also midplane indices. If the cellcount is even in the SOL, there won't be a cell centre exactly on the midplane. omp_a and omp_b are the cells above and below it. There is also imp_a and imp_b.\n",
+    "- xHermes provides different cell length: dl is the poloidal length and dr is the radial length. \n",
+    "- It also provides cell volume which is calculated from dx * dy * dz * J (in SI units)"
    ]
   },
   {
@@ -641,6 +641,52 @@
     "ds = cs[\"base\"].ds.isel(t=-1)\n",
     "\n",
     "ds[\"Te\"].bout.polygon(cmap = \"Spectral_r\", antialias = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating integral quantities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1781394401753588e+21\n",
+      "10853.54829527463\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Integral of density\n",
+    "\n",
+    "# dv = dx * dy * dz * J (in SI units)\n",
+    "ds = cs[\"base\"].ds\n",
+    "total_particles = (ds[\"Ne\"].hermesm.clean_guards() * ds[\"dv\"]).sum().values\n",
+    "total_internal_energy = ((ds[\"Pe\"] + ds[\"Pd+\"]).hermesm.clean_guards() * ds[\"dv\"]).sum().values\n",
+    "\n",
+    "print(total_particles)\n",
+    "print(total_internal_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv = dx * dy * dz * J * rho_s0**3\n",
+    "\n",
+    "Ne = collect(Ne, guards = False)  # etc\n",
+    "\n",
+    "total_particles = (Ne * dv).sum()\n"
    ]
   }
  ],
