--- a/hermes3-solps-soledge/post-PSI/2024-10-31 - Rerun without viscosity.ipynb
+++ b/hermes3-solps-soledge/post-PSI/2024-10-31 - Rerun without viscosity.ipynb
@@ -11,7 +11,31 @@
      "text": [
       "\n",
       "st40_phys_viewer can not be loaded from outside Tokamak Energy!\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\gridtools\\solps_python_scripts\\utilities\\lq.py:57: SyntaxWarning: invalid escape sequence '\\;'\n",
+      "  plt.xlabel('$s\\;[m]$')\n",
+      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\gridtools\\solps_python_scripts\\utilities\\lq.py:58: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "  plt.ylabel('$[MW \\cdot m^{-2}]$')\n",
+      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\gridtools\\solps_python_scripts\\utilities\\lq.py:59: SyntaxWarning: invalid escape sequence '\\l'\n",
+      "  plt.title('$\\lambda_q =$ {:.3G} mm - $R^2 =$ {:.3G}'.format(lq * 1E+03, rSquared))\n",
+      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\gridtools\\solps_python_scripts\\utilities\\lq.py:100: SyntaxWarning: invalid escape sequence '\\;'\n",
+      "  plt.xlabel('$s\\;[m]$')\n",
+      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\gridtools\\solps_python_scripts\\utilities\\lq.py:104: SyntaxWarning: invalid escape sequence '\\l'\n",
+      "  plt.title('{}: $\\lambda_n =$ {:.3G} mm - $R^2 =$ {:.3G}'.format(species, ln[i] * 1E+03, rSquared[i]))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SOLEDGE could not be imported\n",
+      "Viewer_2D: SOLEDGE functions not found\n",
       "Done\n"
      ]
     }
@@ -79,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mikek\\OneDrive\\Project\\python-packages\\xBOUT\\xbout\\load.py:1138: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
+      "c:\\Users\\mikek\\pyenvs\\fusion-3.13\\Lib\\site-packages\\xbout\\load.py:1124: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
       "  warn(\n"
      ]
     },
@@ -99,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mikek\\OneDrive\\Project\\python-packages\\xBOUT\\xbout\\load.py:1138: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
+      "c:\\Users\\mikek\\pyenvs\\fusion-3.13\\Lib\\site-packages\\xbout\\load.py:1124: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
       "  warn(\n"
      ]
     },
@@ -119,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mikek\\OneDrive\\Project\\python-packages\\xBOUT\\xbout\\load.py:1138: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
+      "c:\\Users\\mikek\\pyenvs\\fusion-3.13\\Lib\\site-packages\\xbout\\load.py:1124: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
       "  warn(\n"
      ]
     },
@@ -147,6 +171,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(1.2e+21)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds = cs[\"2e19\"].ds.isel(t=-1)\n",
+    "\n",
+    "(ds[\"Sd_src\"] * ds[\"dv\"]).sum().values"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -155,27 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n",
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n",
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n",
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n",
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n",
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n",
-      "c:\\Users\\mikek\\OneDrive\\Project\\python-packages\\soledge\\routines\\h5_routines.py:65: FutureWarning: In the future `np.str` will be defined as the corresponding NumPy scalar.\n",
-      "  Data = Data.astype(np.str)\n"
+     "ename": "NameError",
+     "evalue": "name 'SOLEDGEcase' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m soledgecases:\n\u001b[32m     14\u001b[39m     path = soledgecases[name]\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     sl[name] = \u001b[43mSOLEDGEdata\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m     sl[name].read_csv(os.path.join(path, \u001b[33m\"\u001b[39m\u001b[33momp_plasma.csv\u001b[39m\u001b[33m\"\u001b[39m), mode = \u001b[33m\"\u001b[39m\u001b[33mplot1d_omp\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m     sl[name].read_csv(os.path.join(path, \u001b[33m\"\u001b[39m\u001b[33momp_neutrals.csv\u001b[39m\u001b[33m\"\u001b[39m), mode = \u001b[33m\"\u001b[39m\u001b[33mplot1d_omp\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\mikek\\OneDrive\\Project\\python-packages\\sdtools\\code_comparison\\code_comparison.py:102\u001b[39m, in \u001b[36mSOLEDGEdata.__init__\u001b[39m\u001b[34m(self, path)\u001b[39m\n\u001b[32m    100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m path != \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    101\u001b[39m     \u001b[38;5;28mself\u001b[39m.path = path\n\u001b[32m--> \u001b[39m\u001b[32m102\u001b[39m     \u001b[38;5;28mself\u001b[39m.case = \u001b[43mSOLEDGEcase\u001b[49m(path)\n\u001b[32m    104\u001b[39m \u001b[38;5;66;03m### Get poloidal data\u001b[39;00m\n\u001b[32m    105\u001b[39m \u001b[38;5;28mself\u001b[39m.regions[\u001b[33m\"\u001b[39m\u001b[33mouter_fieldline\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mself\u001b[39m.case.get_1d_poloidal_data(params = \u001b[38;5;28mself\u001b[39m.case.params, d_from_sep=\u001b[32m0.0009\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'SOLEDGEcase' is not defined"
      ]
     }
    ],
@@ -2020,7 +2058,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fusion-a-310",
+   "display_name": "fusion-3.13 (3.13.4)",
    "language": "python",
    "name": "python3"
   },
@@ -2034,7 +2072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
