--- a/hermes3-solps-soledge/post-PSI/2025-10-03-P0728 - Limit core electron conduction.ipynb
+++ b/hermes3-solps-soledge/post-PSI/2025-10-03-P0728 - Limit core electron conduction.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from boututils.datafile import DataFile\n",
     "from boutdata.collect import collect\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mike/work/boutdata/src/boutdata/data.py:761: AlwaysWarning: While building x, y, z coordinate arrays, an exception occured: [Errno 2] No such file or directory: '\"g3e4f1-lores_widev2_nonortho_xpoint_allf.nc\"'\n",
+      "Evaluating non-scalar options not available\n",
+      "  alwayswarn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TESTING\n",
       "- Reading case upst1b-2e19_MASTER_RERUN\n",
       "-----------------------\n"
      ]
@@ -84,6 +103,7 @@
      "text": [
       "\n",
       "Unnormalising with xHermes\n",
+      "TESTING\n",
       "- Reading case upst1bk-2e19_MASTER_RERUN_core_condfluxlim_0.02\n",
       "-----------------------\n"
      ]
@@ -92,6 +112,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/mike/work/boutdata/src/boutdata/data.py:761: AlwaysWarning: While building x, y, z coordinate arrays, an exception occured: [Errno 2] No such file or directory: '\"g3e4f1-lores_widev2_nonortho_xpoint_allf.nc\"'\n",
+      "Evaluating non-scalar options not available\n",
+      "  alwayswarn(\n",
       "/home/mike/work/xbout/xbout/load.py:1129: UserWarning: Will drop all variables containing the dimensions 't' because they are not recognised\n",
       "  warn(\n"
      ]
